# claunch-rs

./: Cargo.toml
examples/: auth_premium.rs  launch.rs
src/: launcher.rs  lib.rs
src/auth/: microsoft.rs  mod.rs  storage.rs  tests.rs
src/models/: launch_options.rs  library.rs  mod.rs  version_info.rs
src/resolvers/: command_builder.rs  dependency_resolver.rs  mod.rs
src/utils/: json_utils.rs  mod.rs
