[package]
name = "claunch-rs"
version = "1.0.1"
edition = "2024"
authors = ["Santiagolxx", "CubicLauncher contributors"]
license = "AGPL-3.0-or-later"
description = "Minecraft launcher library for CubicLauncher"

[dependencies]
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
url = "2.5"


[dev-dependencies]
env_logger = "0.11"
